# SaaS-GT

./: .env.example  .env.prod.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
nginx/: nginx.prod.conf
node-app/: Dockerfile.dev  Dockerfile.prod  package.json
node-app/public/: conditions.html  index.html  legal.html  login.html  profile.html  transitions.css  transitions.js
node-app/src/: index.js
postgres/: pgadmin_servers.json  postgresql.prod.conf
postgres/init/: 01_init.sql  02_seed_users.sql
rust-app/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
rust-app/migrations/: 20231231000000_initial_schema.sql  20240101000000_drop_achievements_tables.sql  20240101000001_extend_users.sql  20240101000002_create_platform_connections.sql  20240101000003_create_games.sql  20240101000004_create_achievements.sql  20240101000005_create_user_achievements.sql  20240102000000_steam_apikey_unique_hash.sql  20240103000000_add_last_seen_at.sql  20240104000000_add_rank_snapshot.sql  20240105000000_deduplicate_games_unique_normalized_title.sql  20240106000000_add_missing_indexes.sql  20240107000000_add_cover_image_and_playtime.sql  20260307000001_leagues_and_profile.sql  20260308000001_create_retro_consoles.sql  20260308000002_create_retro_games.sql  20260308000003_seed_retro_games_32x.sql  20260308000004_create_retro_game_covers.sql  20260308000005_seed_32x_covers.sql
rust-app/src/: app.rs  lib.rs  main.rs
rust-app/src/models/: achievement.rs  game.rs  mod.rs  platform_connection.rs  user.rs  user_achievement.rs
rust-app/src/pages/: dashboard.rs  game_detail.rs  landing.rs  leaderboard.rs  login.rs  mod.rs  platform_connections.rs  profile.rs  register.rs
rust-app/src/pages/components/: achievement_card.rs  game_card.rs  mod.rs  navbar.rs  progress_bar.rs
rust-app/src/server/: auth.rs  auth_extractor.rs  crypto.rs  db.rs  mod.rs  rate_limit.rs
rust-app/src/server/api/: achievements.rs  auth.rs  games.rs  leaderboard.rs  mod.rs  platforms.rs  retro_consoles.rs  users.rs
rust-app/style/: main.scss
