[package]
name = "achievement-tracker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ─── Leptos (frontend + SSR) ─────────────────────────────────────────────────
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_actix = { version = "0.8", optional = true }

# ─── Web framework (server only) ─────────────────────────────────────────────
actix-web = { version = "4", features = ["macros"], optional = true }
actix-files = { version = "0.6", optional = true }
actix-multipart = { version = "0.6", optional = true }
futures-util = "0.3"

# ─── Base de données (server only) ───────────────────────────────────────────
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
], optional = true }
tokio = { version = "1", features = ["full", "fs", "io-util"], optional = true }

# ─── Sérialisation (partagé client/serveur) ──────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }

# ─── HTTP client pour APIs gaming et requêtes client ─────────────────────────
reqwest = { version = "0.12", features = ["json"] }

# ─── Authentification (server only) ──────────────────────────────────────────
jsonwebtoken = { version = "9", optional = true }
argon2 = { version = "0.5", optional = true }

# ─── Chiffrement symétrique AES-256-GCM (server only) ───────────────────────
aes-gcm = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

# ─── Configuration (server only) ─────────────────────────────────────────────
dotenvy = { version = "0.15", optional = true }

# ─── Logs (server only) ──────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

# ─── HTTP types ──────────────────────────────────────────────────────────────
http = { version = "1", optional = true }

# ─── WASM ────────────────────────────────────────────────────────────────────
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }

# ─── Async trait ─────────────────────────────────────────────────────────────
async-trait = { version = "0.1", optional = true }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:actix-web",
    "dep:actix-files",
    "dep:actix-multipart",
    "dep:leptos_actix",
    "dep:sqlx",
    "dep:tokio",
    "dep:jsonwebtoken",
    "dep:argon2",
    "dep:aes-gcm",
    "dep:base64",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:http",
    "dep:async-trait",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# ─── WASM : dépendances spécifiques au navigateur ────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "achievement-tracker"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

# ─── Optimisations de développement ──────────────────────────────────────────
# Important : Argon2 est extrêmement lent en mode "debug" non optimisé,
# ce qui fait timeout les requêtes côté client (12s+).
# On compile les dépendances avec les optimisations maximales (opt-level = 3)
# pour retrouver des performances cryptographiques normales.
[profile.dev.package."*"]
opt-level = 3
